Bug 1806391 - Remove OS X PDM H264 hardware acceleration check to prevent crashes in 10.12-10.14 r=jolin a=dsmith

Differential Revision: https://phabricator.services.mozilla.com/D165112